--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<script src="js/app.js"></script>
+
 	<link rel="stylesheet" href="css/styles.css">
 	<title>Shopping Cart</title>
 </head>
 <body>
-	<div id="container"></div>
+<div id="header">
+	<h2>Shopping Cart</h2>
+</div>
+<div id="container">
+	
+</div>
+
+<div id="footer">
+
+</div>
+	<script src="js/app.js"></script>
 </body>
 </html>
